<resources>
    <string name="app_name">PaceConverterApp</string>
    <string name="str_pace_converter_title">Pace Converter App</string>
    <string name="str_distance_title">Distance</string>
    <string name="str_two_points_separator">:</string>
    <string name="str_time">Time</string>
    <string name="str_calculate">Calculate</string>
    <string name="your_pace_is">Your pace is:</string>
</resources>