<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/str_pace_converter_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/str_distance_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_title" />

    <EditText
        android:id="@+id/editTxt_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:ems="5"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/txt_distance_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_title" />

    <EditText
        android:id="@+id/editTxt_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:ems="2"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/txt_time_title"
        app:layout_constraintStart_toEndOf="@+id/txt_time_title" />

    <EditText
        android:id="@+id/editTxt_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ems="2"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/txt_time_separator1"
        app:layout_constraintStart_toEndOf="@+id/txt_time_separator1" />

    <EditText
        android:id="@+id/editTxt_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ems="2"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/txt_time_separator2"
        app:layout_constraintStart_toEndOf="@+id/txt_time_separator2" />

    <TextView
        android:id="@+id/txt_time_separator2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/str_two_points_separator"
        app:layout_constraintBottom_toBottomOf="@+id/editTxt_minutes"
        app:layout_constraintStart_toEndOf="@+id/editTxt_minutes" />

    <TextView
        android:id="@+id/txt_time_separator1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/str_two_points_separator"
        app:layout_constraintBottom_toBottomOf="@+id/editTxt_hours"
        app:layout_constraintStart_toEndOf="@+id/editTxt_hours" />

    <TextView
        android:id="@+id/txt_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/roboto"
        android:text="@string/str_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_distance_title" />

    <Button
        android:id="@+id/btn_calculate_pace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/str_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_title" />

    <TextView
        android:id="@+id/txt_pace_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="24dp"
        android:text="@string/your_pace_is"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate_pace" />


</androidx.constraintlayout.widget.ConstraintLayout>